# my-skills

./: README.md  understand  understand-chat  understand-dashboard  understand-diff  understand-domain  understand-explain  understand-knowledge  understand-onboard
.claude-plugin/: marketplace.json
azf-literature-reading-workflow/scripts/runtime/: pyproject.toml  requirements.txt  runtime-version.json
azf-literature-reading-workflow/scripts/runtime/tests/contract/: test_figure_manifest_contract.py  test_mineru_local_contract.py  test_paper_workspace_contract.py  test_source_language_contract.py  test_template_starter_contract.py  test_translation_footnotes.py  test_workspace_cleanliness_contract.py  test_zh_fulltext_contract.py
azf-literature-reading-workflow/scripts/runtime/tests/fixtures/: README.md  pilot-cases.md
azf-literature-reading-workflow/scripts/runtime/tests/integration/: test_artifact_migration.py  test_artifact_runs.py  test_cli_contracts.py  test_concept_card_migration.py  test_concept_library_migration.py  test_location_resolution.py  test_mineru_output_mapping_and_regions.py  test_plan_batch.py  test_quickstart_pilot_flow.py  test_repair_workspace_paths.py  test_us1_workspace_ingest.py  test_us2_mineru_figures_layout.py  test_us3_reading_assets_source_anchors.py  test_us4_template_evolution.py
azf-literature-reading-workflow/scripts/runtime/workflow/: __init__.py  cli.py
azf-literature-reading-workflow/scripts/runtime/workflow/adapters/: __init__.py  figure_render_extractor.py  mineru_docker.py  zh_fulltext_translator.py  zotero_obsidian_mcp.py
(+186 files in other folders)
