[project]
name = "azf-literature-workflow"
version = "0.1.0"
description = "Local-first Chinese literature reading workflow for Obsidian, Zotero, MinerU, and agent tools."
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF>=1.23",
  "Pillow>=10",
  "PyYAML>=6",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
literature-workflow = "workflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

